--- a/cadastro/pom.xml
+++ b/cadastro/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>cadastro</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+<!--    <packaging>pom</packaging>-->
     <properties>
         <compiler-plugin.version>3.14.0</compiler-plugin.version>
         <maven.compiler.release>21</maven.compiler.release>
