--- a/ifood/pom.xml
+++ b/ifood/pom.xml
@@ -5,6 +5,13 @@
     <artifactId>ifood</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <packaging>pom</packaging>
+    <modules>
+        <module>../cadastro</module>
+        <module>../marketplace</module>
+        <module>../notificacao</module>
+    </modules>
+
     <properties>
         <compiler-plugin.version>3.14.0</compiler-plugin.version>
         <maven.compiler.release>21</maven.compiler.release>
