--- a/notificacao/pom.xml
+++ b/notificacao/pom.xml
@@ -4,6 +4,7 @@
     <groupId>org.ifood</groupId>
     <artifactId>notificacao</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+<!--    <packaging>pom</packaging>-->
 
     <properties>
         <compiler-plugin.version>3.14.0</compiler-plugin.version>
