--- a/ifood/docker-compose.yml
+++ b/ifood/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
+      POSTGRES_DB: ifood
     ports:
       - "5432:5432"
 
