--- a/cadastro/src/main/resources/application.properties
+++ b/cadastro/src/main/resources/application.properties
@@ -3,4 +3,4 @@ quarkus.datasource.username=postgres
 quarkus.datasource.password=123
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ifood
 quarkus.datasource.jdbc.max-size=16
-quarkus.hibernate-orm.schema-management.strategy=drop-and-create
+quarkus.hibernate-orm.schema-management.strategy=update
