--- a/cadastro/src/main/resources/application.properties
+++ b/cadastro/src/main/resources/application.properties
@@ -4,3 +4,9 @@ quarkus.datasource.password=123
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ifood
 quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.schema-management.strategy=update
+
+quarkus.otel.enabled=true
+quarkus.otel.service.name=ifood-cadastro
+quarkus.otel.exporter.otlp.protocol=grpc
+quarkus.otel.exporter.otlp.endpoint=http://localhost:4317
+
