feat: implementando jaeger

--- a/cadastro/src/main/resources/application.properties
+++ b/cadastro/src/main/resources/application.properties
@@ -10,3 +10,9 @@ quarkus.otel.service.name=ifood-cadastro
 quarkus.otel.exporter.otlp.protocol=grpc
 quarkus.otel.exporter.otlp.endpoint=http://localhost:4317
 
+# Habilitar traces de SQL
+quarkus.otel.instrumentation.jdbc.enabled=true
+quarkus.otel.instrumentation.jdbc.record-statement=true
+
+
+
