feat: grafana e promethesu funcionando

--- a/cadastro/src/main/resources/application.properties
+++ b/cadastro/src/main/resources/application.properties
@@ -10,9 +10,13 @@ quarkus.otel.service.name=ifood-cadastro
 quarkus.otel.exporter.otlp.protocol=grpc
 quarkus.otel.exporter.otlp.endpoint=http://localhost:4317
 
-# Habilitar traces de SQL
-quarkus.otel.instrumentation.jdbc.enabled=true
-quarkus.otel.instrumentation.jdbc.record-statement=true
+# habilitar micrometer
+quarkus.micrometer.enabled=true
+
+# exportar para prometheus
+quarkus.micrometer.export-prometheus.enabled=true
+quarkus.micrometer.export-prometheus.path=/q/metrics
+quarkus.http.host=0.0.0.0
 
 
 
