--- a/ifood/docker-compose.yml
+++ b/ifood/docker-compose.yml
@@ -36,6 +36,9 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
 
   grafana_ifood:
     container_name: grafana_ifood
