--- a/ifood/prometheus.yml
+++ b/ifood/prometheus.yml
@@ -1,12 +1,10 @@
 global:
-  scrape_interval:     5s
-  external_labels:
-    monitor: 'codelab-monitor'
-
+  scrape_interval: 5s
 
 scrape_configs:
   - job_name: 'ifood-cadastro'
     scrape_interval: 5s
-
+    metrics_path: /q/metrics
     static_configs:
-      - targets: ['localhost:9090']
+      - targets:
+          - host.docker.internal:8080
