feat: grafana e promethesu funcionando

--- a/cadastro/src/main/resources/application.properties
+++ b/cadastro/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.datasource.username=postgres
 quarkus.datasource.password=123
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ifood
 quarkus.datasource.jdbc.max-size=16
-quarkus.hibernate-orm.schema-management.strategy=update
+#quarkus.hibernate-orm.schema-management.strategy=update
 
 quarkus.otel.enabled=true
 quarkus.otel.service.name=ifood-cadastro
@@ -17,6 +17,11 @@ quarkus.micrometer.enabled=true
 quarkus.micrometer.export-prometheus.enabled=true
 quarkus.micrometer.export-prometheus.path=/q/metrics
 quarkus.http.host=0.0.0.0
+
+# flyway
+quarkus.flyway.clean-at-start=true
+quarkus.flyway.migrate-at-start=true
+
 
 
 
