--- a/cadastro/pom.xml
+++ b/cadastro/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-flyway</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
