--- a/ifood/pom.xml
+++ b/ifood/pom.xml
@@ -7,6 +7,7 @@
 
     <packaging>pom</packaging>
     <modules>
+        <module>../core</module>
         <module>../cadastro</module>
         <module>../marketplace</module>
         <module>../notificacao</module>
@@ -37,6 +38,12 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>../core</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc</artifactId>
